Final update to reach 1.0.0. See SPECPROC-1 .

--- a/docs/UML/class_index.adoc
+++ b/docs/UML/class_index.adoc
@@ -70,6 +70,10 @@
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_i_task_plan_materialised_interface[I_TASK_PLAN_MATERIALISED]
 [.xcode]
+* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_i_work_plan_definition_interface[I_WORK_PLAN_DEFINITION]
+[.xcode]
+* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_i_work_plan_materialised_interface[I_WORK_PLAN_MATERIALISED]
+[.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_linked_plan_class[LINKED_PLAN]
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_manual_notification_class[MANUAL_NOTIFICATION]
@@ -125,6 +129,8 @@
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_reminder_class[REMINDER]
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_resource_participation_class[RESOURCE_PARTICIPATION]
+[.xcode]
+* http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_resume_action_class[RESUME_ACTION]
 [.xcode]
 * http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html#_resume_type_enumeration[RESUME_TYPE]
 [.xcode]
