--- a/docs/UML/classes/decision_branch.adoc
+++ b/docs/UML/classes/decision_branch.adoc
@@ -19,6 +19,8 @@ h|*1..1*
 |*value_constraint*: `Any`
 a|Constraint on result value of the owning Decision Group `_test_` expression, for this branch.
 
+TODO: consider use of `C_PRIMITIVE_OBJECT` from AOM as constrainer type.
+
 h|*Invariants*
 2+a|*_Inv_no_wait_condition_*: `wait_spec = Void`
 |===
