--- a/docs/UML/classes/i_task_plan_materialised.adoc
+++ b/docs/UML/classes/i_task_plan_materialised.adoc
@@ -6,7 +6,7 @@ h|*Interface*
 2+^h|*I_TASK_PLAN_MATERIALISED*
 
 h|*Description*
-2+a|
+2+a|Task planning API for materialised Task Plan level.
 
 h|*Functions*
 ^h|*Signature*
