--- a/docs/UML/classes/task_participation.adoc
+++ b/docs/UML/classes/task_participation.adoc
@@ -14,7 +14,7 @@ h|*Attributes*
 
 h|*0..1*
 |*function*: `DV_TEXT`
-a|The function of the Party in this participation (note that a given party might participate in more than one way in a particular activity). This attribute should be coded, but cannot be limited to the HL7v3:ParticipationFunction vocabulary, since it is too limited and hospital-oriented.
+a|The function of the Party in this participation (note that a given party might participate in more than one way in a particular activity). This attribute should be coded.
 
 h|*0..1*
 |*role*: `List<DV_TEXT>`
