--- a/docs/UML/classes/task_wait.adoc
+++ b/docs/UML/classes/task_wait.adoc
@@ -6,12 +6,13 @@ h|*Class*
 2+^h|*TASK_WAIT*
 
 h|*Description*
-2+a|Object representing time of an Task to be performed in terms of a related event. The `_delay_` attribute may be used to delay the start time by some amount. The `_start_window_` is used to add an 'acceptable delay' time within which the Task should be start with respect to the intended start time. The `_timeout_` attribute can be used for non-deterministic Events
+2+a|Object representing time of an Task to be performed in terms of a related event. The `_delay_` attribute may be used to delay the start time by some amount. The `_start_window_` is used to add an 'acceptable delay' time within which the Task should be start with respect to the intended start time. The `_timeout_` attribute can be used for non-deterministic Events.
 
-* clock time: event = `TIMER_EXPIRY`
-* event-linked: event = `CALENDAR_EVENT` or `MANUAL_EVENT`, e.g. evening meal, washing, etc;
+* clock time: event = `TIMELINE_MOMENT`, `CALENDAR_EVENT`;
+* notification-based: event =  or `MANUAL_EVENT`, `SYSTEM_NOTIFICATION`;
 * task-linked: event = `TASK_TRANSITION`, e.g. 1hr after previous Task done;
-* state-linked: event = `STATE_TRIGGER`
+* state-linked: event = `STATE_TRIGGER`, e.g. 'when systolic BP > 165';
+* any event with added delay: `DELAY_EVENT`.
 
 h|*Attributes*
 ^h|*Signature*
