--- a/docs/UML/classes/work_plan.adoc
+++ b/docs/UML/classes/work_plan.adoc
@@ -27,7 +27,7 @@ It is currently assumed that there is no reliable machine identifier system for 
 
 h|*1..1*
 |*plans*: `List<UID_BASED_ID>`
-a|
+a|The set of all Task Plans use in this Work Plan. In general, only some of these are top-level Plans.
 
 h|*0..1*
 |*care_plan*: `LOCATABLE_REF`
@@ -56,6 +56,10 @@ a|
 h|*0..1*
 |*event_wait_states*: `List<EVENT_WAIT>`
 a|Reference list of all defined Event Listeners.
+
+h|*0..1*
+|*top_level_plans*: `List<UID_BASED_ID>`
+a|The set of top-level Plans that correspond to the performers and work pathways of this Work Plan.
 
 h|*1..1 +
 (redefined)*
