--- a/docs/task_planning/master.adoc
+++ b/docs/task_planning/master.adoc
@@ -19,7 +19,7 @@
 :linkcss:
 :keywords: task, planning, EHR, EMR, reference model, openehr
 :description: openEHR Task Planning Specification
-:spec_status: DEVELOPMENT
+:spec_status: TRIAL
 
 //
 // ============================================ Asciidoc PREAMBLE =============================================
@@ -72,14 +72,16 @@ The work reported in this specification has been funded by the following organis
 
 === Intellectual Origins
 
-Many of the design ideas presented in this specification came from industry sources, as well as research literature. The openEHR implementers Marand and DIPS provided significant detailed requirements, use cases, and design ideas. 
+Many of the design ideas presented in this specification came from analysis of use cases from industry sources. In particular, the openEHR implementers Marand and DIPS provided significant detailed requirements, use cases, and design ideas.
 
-Additionally the Activity-Based Design (ABD) project at Intermountain Healthcare (2015-), on which the primary author worked part time proved an important source of cross-fertilisation. The latter project, led by David Edwards and Alan James (chief architect), has a sophisticated architecture based on a custom archetype / template framework, adaptive workflow concepts, application generation and real-time speech recognition. It has pioneered a number of concepts used in the current specification, including the separation of Definition, Materialised and Runtime levels of representation.
+Additionally the Activity-Based Design (ABD) project at Intermountain Healthcare (2015-), on which the primary author worked part time proved an important source of cross-fertilisation. The latter project, led by David Edwards and Alan James (chief architect), has a sophisticated architecture based on a custom archetype / template framework, adaptive workflow concepts, application generation and real-time speech recognition. It has pioneered a number of concepts used in the current specification, including the separation of definition, materialised and runtime levels of representation.
+
+Lastly, a review of research literature and standards was conducted. Many of the ideas in YAWL ([<<Hofstede_van_der_Aalst_2009>>]) and its underlying research influenced this specification. The authors also reviewed various standards, including the OMG's {bpmn}[BPMN] and {cmmn}[CMMN].
 
 === Trademarks
 
 * 'openEHR' is a trademark of the openEHR Foundation.
-
+* 'OMG' is a trademark of the Object Management Group.
 
 //
 // --------------------------------------------- TOC -----------------------------------------------
@@ -92,13 +94,13 @@ Additionally the Activity-Based Design (ABD) project at Intermountain Healthcare
 :sectanchors:
 :sectnums:
 include::master01-preface.adoc[leveloffset=+1]
-include::master02-glossary.adoc[leveloffset=+1]
-include::master03-background.adoc[leveloffset=+1]
-include::master04-requirements.adoc[leveloffset=+1]
-include::master05-design.adoc[leveloffset=+1]
-include::master06-model_overview.adoc[leveloffset=+1]
-include::master07-model_definition.adoc[leveloffset=+1]
-include::master08-definition_patterns.adoc[leveloffset=+1]
+include::master02-background.adoc[leveloffset=+1]
+include::master03-requirements.adoc[leveloffset=+1]
+include::master04-design.adoc[leveloffset=+1]
+include::master05-model_overview.adoc[leveloffset=+1]
+include::master06-model_definition.adoc[leveloffset=+1]
+include::master07-definition_patterns.adoc[leveloffset=+1]
+include::master08-execution_model_overview.adoc[leveloffset=+1]
 include::master09-model_materialised.adoc[leveloffset=+1]
 include::master10-model_history.adoc[leveloffset=+1]
 include::master11-service_model.adoc[leveloffset=+1]
