--- a/docs/task_planning/master00-amendment_record.adoc
+++ b/docs/task_planning/master00-amendment_record.adoc
@@ -4,13 +4,19 @@
 |===
 |Issue|Details|Raiser|Completed
 
-4+^h|*R E L E A S E{nbsp}{nbsp}{nbsp}{nbsp}{nbsp}1.?.?*
+4+^h|*R E L E A S E{nbsp}{nbsp}{nbsp}{nbsp}{nbsp}1.0.0*
 
-|[[latest_issue]]0.9.0
+|[[latest_issue]]1.0.0
+|{openehr_jira}/SPECPROC-1[SPECPROC-1] Further documentation improvements;
+ Added explanations for resume semantics; added `RESUME_ACTION` class.
+|T Beale
+|[[latest_issue_date]]16 Oct 2017
+
+|0.9.0
 |{openehr_jira}/SPECPROC-1[SPECPROC-1] Restructure document;
  Various refactoring of Event classes; global calendar, timeline.
 |T Beale
-|[[latest_issue_date]]12 Oct 2017
+|12 Oct 2017
 
 |0.8.2
 |{openehr_jira}/SPECPROC-1[SPECPROC-1] Workshop Sep 25-28 and follow-up calls; +
