--- a/docs/task_planning/master05-model_overview.adoc
+++ b/docs/task_planning/master05-model_overview.adoc
@@ -1,30 +1,24 @@
-= Task Planning Model
+= Task Planning Model Overview
 
-== Overview
+The following UML diagram shows the `rm.task_planning` package in overview form, showing the constituent packages, `definition`, `materialised`, and `history`. The first of these packages contains the class model for the _definition model_ expression of a Work Plan, i.e. the workflow structure intentionally designed to achive a goal.
 
-The following UML diagram shows the `rm.task_planning` package in overview form, with the essential classes, inheritance and compositional relationships. The class `WORK_PLAN` is a descendant of `CONTENT_ITEM`, which makes it a type of content that may occur in a `COMPOSITION`. Compositions used for this purpose have their `_category_` attribute set to the openEHR coded term `|Task Plan|`. This enables Task Plans to be committed to the openEHR EHR if desired.
+The `materialised` package contains the class model of the amterialised form of the definition, which is created prior to its use in execution. The materialised model is presented in outline only, as a way of indicating some of the general features of the materialised form, and is not intended to be normative. (At some point in the future, a skeleton materialised model may be declared normative, based on implementation experience).
 
-A `WORK_PLAN` is the outermost container for one or more `TASK_PLANs` that refer to each other in some way, as well as the meta-data documenting the plan.
-
-Structurally, a `TASK_PLAN` has a `_definition_` (blue classes) consisting of `TASK_GROUP` and `TASK`. The work of a Task is defined in the hierarchy of `TASK_ACTION` types.
-
-At clinical execution time, the materialsed form of the Plan is represented by `M_XXX` classes, which are instantiated when the plan is activated (central orange classes).
-
-A `TASK_PLAN` may also have an `_execution_history_` (gold classes at bottom), which acts as a record of events that have occurred to the Task Plan during execution.
+The `history` package contains the model of audit events that have occurred to each Task Plan in a Work Plan during execution.
 
 [.text-center]
 .rm.task_planning package overview
 image::{uml_export_dir}/diagrams/PROC-task_planning-overview.svg[id=proc_task_planning_overview, align="center"]
 
-The key structural relationships are shown in the following instance diagram. On the left is a Task Plan definition, consisting of a Task Group and various Defined Actions. Each of these Tasks may have a prototype Entry attached, which represents the intended data of an Action, Observation or other Entry that the Task defines.
+The following instance diagram illustrates the relationships among these models for one Task Plan. On the left is a Task Plan definition, consisting of a Task Group and various Defined Actions. Each of these Tasks may have a prototype Entry attached, which represents the intended data of an Action, Observation or other Entry that the Task defines.
 
-In the centre is a materialised Task Plan, which is an execution-time structure used to maintain state for an executing Plan (achieved by the `M_PLAN_ITEM._definition_` association). This structure allows the recording of all state to do with Task execution, including instances of variables, timing information and so on. The materialised structure is not owned by the definition structure, but rather is created at run time, and points back to its definition (_owner_ and _definition_ links). The right hand side shows a part of the materialised structure that is currently instantiated within a user-application session.
+In the centre is a materialised Task Plan, which is an execution-time structure used to maintain state for an executing Plan. This structure allows the representation of all state to do with Plan execution, including instances of variables, timing information and so on. The materialised structure is not owned by the definition structure, but rather is created at run time, and points back to its definition via various references. The right hand side of the diagram shows a part of the materialised structure that is currently instantiated within a user-application session.
 
-At the lower right is a Task Execution History, which is a record of all events that were made during the execution of the original Task Plan.
+At the lower right is a Task Plan Execution History, which is a record of all events that were made during the execution of the original Task Plan.
 
 [.text-center]
 .Task planning overview
-image::diagrams/task_planning_overview.svg[id=task_planning_overview, align="center", width=75%]
+image::diagrams/task_planning_overview.svg[id=task_planning_overview, align="center", width=65%]
 
 == Identification and Referencing
 
