--- a/docs/index.adoc
+++ b/docs/index.adoc
@@ -44,8 +44,8 @@ endif::[]
 |===
 h|Specification h|Description
 
-|http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html[Task Planning Model]
-|A major extension to the openEHR EHR specificationsl that specifies Planned Tasks and clinical workflow.
+|http://www.openehr.org/releases/PROC/{proc_release}/task_planning.html[Task Planning Specification]
+|A major extension to the openEHR EHR specifications that defines a formal model for Task Plans and clinical workflow.
 
 |===
 
