--- a/docs/UML/classes/plan_event.adoc
+++ b/docs/UML/classes/plan_event.adoc
@@ -11,4 +11,11 @@ h|*Description*
 h|*Inherit*
 2+|`LOCATABLE`
 
+h|*Attributes*
+^h|*Signature*
+^h|*Meaning*
+
+h|*0..1*
+|*other_details*: `ITEM_STRUCTURE`
+a|
 |===
