--- a/docs/task_planning/master00-amendment_record.adoc
+++ b/docs/task_planning/master00-amendment_record.adoc
@@ -10,7 +10,7 @@
 |{openehr_jira}/SPECPROC-1[SPECPROC-1] Further documentation improvements;
  Added explanations for resume semantics; added `RESUME_ACTION` class.
 |T Beale
-|[[latest_issue_date]]16 Oct 2017
+|[[latest_issue_date]]17 Oct 2017
 
 |0.9.0
 |{openehr_jira}/SPECPROC-1[SPECPROC-1] Restructure document;
@@ -28,6 +28,7 @@
  B Naess, +
  M Kejžar, +
  E Leonov, +
+ V Makarov, +
  T Beale
 |10 Oct 2017
 
@@ -70,8 +71,8 @@
 
 |0.6.0
 |{openehr_jira}/SPECRM-58[SPECRM-58]. Initial writing.
-|T Beale,
- B Naess,
+|T Beale, +
+ B Naess, +
  I McNicoll
 |26 Jan 2017
 
